fix dark mode issue and nest css files

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,8 +3,7 @@
 
 header {
 	width: 100%;
-	border-bottom: 1px solid #334856;
-	/* 	background-color: #fff; */
+	border-bottom: 1px solid inherit;
 
 	nav {
 		ul {
@@ -29,9 +28,18 @@ html,
 body,
 main {
 	height: 100%;
-	/* 	background-color: #e5e5e5; */
 }
-
+body {
+	color: #334856;
+	background-color: #fff;
+}
+#wrapper,
+main,
+section,
+.swipeItem,
+.card {
+	background-color: inherit;
+}
 img {
 	width: 100%;
 	height: auto;
@@ -61,43 +69,38 @@ img {
 
 header {
 	width: 100%;
-}
-
-nav {
-	width: 100%;
-	border-bottom: 1px solid gray;
-}
-
-nav ul {
-	display: flex;
-	justify-content: space-between;
-	padding: 30px;
-}
-
-nav ul li {
-	list-style: none;
-	color: #324755;
-}
-
-nav ul li a {
-	text-decoration: none;
-	color: #324755;
-}
-
-.archived-number {
-	position: relative;
-	&::after {
-		background-color: #87bcbf;
-		color: #fff;
-		content: attr(data-text);
-		width: 20px;
-		height: 20px;
-		border-radius: 50%;
-		position: absolute;
-		text-align: center;
-		font-weight: 600;
-		top: -10px;
-		right: -10px;
+	nav {
+		width: 100%;
+		border-bottom: 1px solid gray;
+		ul {
+			display: flex;
+			justify-content: space-between;
+			padding: 30px;
+			.archived-number {
+				position: relative;
+				&::after {
+					background-color: #87bcbf;
+					color: #fff;
+					content: attr(data-text);
+					width: 20px;
+					height: 20px;
+					border-radius: 50%;
+					position: absolute;
+					text-align: center;
+					font-weight: 600;
+					top: -10px;
+					right: -10px;
+				}
+			}
+			li {
+				list-style: none;
+				color: #324755;
+				a {
+					text-decoration: none;
+					color: #324755;
+				}
+			}
+		}
 	}
 }
 
@@ -105,36 +108,28 @@ form {
 	width: 100%;
 	padding: 30px;
 	border-bottom: 1px solid gray;
-	/* 	background-color: #ffffff; */
-}
-
-.search-container {
-	display: block;
-}
-
-input#search-bar {
-	margin: 0 auto;
-	width: 100%;
-	height: 45px;
-	padding: 0 20px;
-	font-size: 1rem;
-	border: 1px solid #d0cfce;
-	outline: none;
-	background-color: #e5e5e5;
-	border-radius: 5px;
-}
-
-.search-icon {
-	position: relative;
-	float: right;
-	width: 75px;
-	height: 75px;
-	top: -30px;
-	right: -45px;
-}
-
-.diamond {
-	width: 50px;
+	.search-container {
+		display: block;
+	}
+	input#search-bar {
+		margin: 0 auto;
+		width: 100%;
+		height: 45px;
+		padding: 0 20px;
+		font-size: 1rem;
+		border: 1px solid #d0cfce;
+		outline: none;
+		background-color: #e5e5e5;
+		border-radius: 5px;
+	}
+	.search-icon {
+		position: relative;
+		float: right;
+		width: 75px;
+		height: 75px;
+		top: -30px;
+		right: -45px;
+	}
 }
 
 .images {
@@ -163,15 +158,14 @@ input#search-bar {
 	align-items: center;
 	padding: 5px;
 	border-bottom: 1px solid gray;
-	/* 	background-color: #fff; */
 }
 
 .article-heading,
 .angle-icon {
-	color: #334856;
+	color: inherit;
 	align-self: center;
 	margin-right: 20px;
-	font-size: 30px;
+	font-size: 25px;
 }
 
 .inbox-category {
@@ -180,11 +174,13 @@ input#search-bar {
 	align-items: center;
 	justify-content: center;
 	align-items: center;
-}
-
-.inbox-category i {
-	color: #d97d54;
-	align-self: center;
+	.inbox-category i {
+		color: #d97d54;
+		align-self: center;
+	}
+	.diamond {
+		width: 50px;
+	}
 }
 
 .angle-icon {
@@ -203,7 +199,6 @@ input#search-bar {
 	grid-row-end: 2;
 	transition: 0.15s;
 	z-index: 1;
-	background-color: #fff;
 	display: flex;
 }
 
@@ -246,7 +241,6 @@ input#search-bar {
 	display: flex;
 	justify-content: space-between;
 	border-bottom: 1px solid gray;
-	background-color: #fff;
 }
 
 .archive-category i {
@@ -255,13 +249,10 @@ input#search-bar {
 }
 
 .title {
-	color: #334856;
+	color: inherit;
 	font-size: 15px;
 	font-weight: bold;
 	margin-top: 5px;
-}
-.title:hover {
-	background-color: green;
 }
 
 .desc {
@@ -297,64 +288,59 @@ main {
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	/* background-color: #eceff0; */
 }
-
+.main-setting {
+	background-color: #eceff0;
+}
 .main-toggle-container {
 	background-color: #ffffff;
 	width: 340px;
 	border-radius: 10px;
 	border: inherit;
-}
-
-.toggle-button-wrapper {
-	max-width: 600px;
-	width: 100%;
-	border: 1px solid hsl(0, 0%, 75%);
-	padding: 10px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	.toggle-button-wrapper {
+		max-width: 600px;
+		width: 100%;
+		border: 1px solid hsl(0, 0%, 75%);
+		padding: 10px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	.toggle-button-wrapper input[type="checkbox"] {
+		display: none;
+	}
+	.toggle-wrapper {
+		width: 60px;
+		border: 1px solid hsl(0, 0%, 75%);
+		background-color: hsl(0, 0%, 90%);
+		box-shadow: 0 2px 5px hsla(0, 0%, 0%, 20%);
+		height: 32px;
+		border-radius: 16px;
+		position: relative;
+	}
+	input[type="checkbox"]:checked + .toggle-wrapper {
+		background-color: #87bcbf;
+	}
+	.toggle {
+		width: 30px;
+		height: 30px;
+		border: 1px solid hsl(0, 0%, 65%);
+		background-color: #ffffff;
+		box-shadow: 0 2px 5px hsla(0, 0%, 0%, 50%);
+		border-radius: 15px;
+		position: absolute;
+		left: 0;
+		transition: left 0.25s;
+	}
+	input[type="checkbox"]:checked + .toggle-wrapper > .toggle {
+		left: calc(100% - 30px);
+	}
 }
 
 span {
-	color: #334856;
+	color: inherit;
 	font-size: 15px;
 	font-weight: bold;
-}
-
-.toggle-button-wrapper input[type="checkbox"] {
-	display: none;
-}
-
-.toggle-wrapper {
-	width: 60px;
-	border: 1px solid hsl(0, 0%, 75%);
-	background-color: hsl(0, 0%, 90%);
-	box-shadow: 0 2px 5px hsla(0, 0%, 0%, 20%);
-	height: 32px;
-	border-radius: 16px;
-	position: relative;
-}
-
-input[type="checkbox"]:checked + .toggle-wrapper {
-	background-color: #87bcbf;
-}
-
-.toggle {
-	width: 30px;
-	height: 30px;
-	border: 1px solid hsl(0, 0%, 65%);
-	background-color: #ffffff;
-	box-shadow: 0 2px 5px hsla(0, 0%, 0%, 50%);
-	border-radius: 15px;
-	position: absolute;
-	left: 0;
-	transition: left 0.25s;
-}
-
-input[type="checkbox"]:checked + .toggle-wrapper > .toggle {
-	left: calc(100% - 30px);
 }
 
 body.dark {
@@ -364,6 +350,7 @@ body.dark {
 
 body.dark .toggle-button-wrapper {
 	border: 1px solid hsl(0, 0%, 25%);
+	background-color: #000;
 }
 
 body.dark .toggle-wrapper {
@@ -371,7 +358,9 @@ body.dark .toggle-wrapper {
 	background-color: hsl(0, 0%, 10%);
 	box-shadow: 0 2px 5px hsla(0, 0%, 100%, 20%);
 }
-
+body.dark .main-setting {
+	background-color: hsl(0, 0%, 10%);
+}
 body.dark .toggle {
 	border: 1px solid hsl(0, 0%, 35%);
 	background-color: hsl(0, 0%, 25%);
@@ -389,7 +378,7 @@ button {
 
 .toggle-txt {
 	font-size: 14px;
-	color: #334856;
+	color: inherit;
 	justify-content: center;
 	align-items: center;
 }
